--- a/package.json
+++ b/package.json
@@ -105,19 +105,27 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.14",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
     "husky": "9.1.7",
     "jsdom": "^25.0.1",
     "lint-staged": "16.2.7",
     "quill": "^2.0.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "tsup": "^8.4.0",
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
   },
   "peerDependencies": {
-    "react": ">=18"
+    "react": ">=18",
+    "react-dom": ">=18"
   },
   "peerDependenciesMeta": {
     "react": {
+      "optional": true
+    },
+    "react-dom": {
       "optional": true
     }
   }
