--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill-delta-render",
+  "name": "quill-delta-renderer",
   "version": "0.1.0",
   "description": "A framework-agnostic, AST-based engine for converting Quill Deltas into HTML, Markdown, React components, or any other format.",
   "type": "module",
